@startuml

class User{
- userId
- name
- email
- passwordHash
- role
}
class Order {
- orderID
- date
- totalPrice
- status
}

class Carport {

}
class PrefabricatedCarport{
- carportID
- name
- basePrice
- width
- length
- height
}
class CustomCarport{

}

class Roof{
- price

}
class FlatRoof{

}
class RaisedRoof{

}

class Shed{
}

class MaterialList{

}
class MaterialLine{
- quantity
- unitPrice
}
class Material{
- materialID
- name
- price
}

User "1" -- "0..*" Order : has

Order "1" -- "1" Carport : has
Carport "1" -- "1" Roof : has
Carport "1" -- "0..1" Shed : has
Carport "1" -- "1" MaterialList : has
MaterialList "1" -- "1..*" MaterialLine : has
MaterialLine "1" -- "1" Material : has

Carport <|-- PrefabricatedCarport : is
Carport <|-- CustomCarport : is
Roof <|-- FlatRoof : is
Roof <|-- RaisedRoof : is

@enduml
